Changed to use config for the ghostscript path and temp folder path.  Fixed a problem with file size limits.

--- a/ImageConversion/ImageConversionApi/appsettings.json
+++ b/ImageConversion/ImageConversionApi/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "GhostScriptConfig": {
+    "GhostScriptExePath": "C:\\Program Files (x86)\\gs\\gs9.06\\bin\\gswin32c.exe",
+    "TempImageFolder": "C:\\temp\\tempImageFiles",
+    "JpegImageConverterPath": "C:\\Program Files (x86)\\gs\\gs9.06\\lib\\viewjpeg.ps"
+  },
   "AllowedHosts": "*"
 }
